test-suite/misc/10212/B.v
Require A.
Notation "!!" := A.x : foo_scope.
Fail Check A.def !!.

Import A.
Check def ##.
